--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,3 @@
-# H2DB definition
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.url=jdbc:h2:./h2db/sampledb
-#spring.datasource.username=username
-#spring.datasource.password=password
-#spring.jpa.hibernate.ddl-auto=create
-
 # application settings
 zoeque.parroticator.message.length=1024
-zoeq.parroticator.server.port=1000
+zoeque.parroticator.server.port=2000
