Task #3 - Add javadoc and create the parameter of encoding

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 # application settings
 zoeque.parroticator.message.length=1024
+zoeque.parroticator.message.encoding=SJIS
 zoeque.parroticator.server.port=2000
