--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'zoeq'
-version = '0.0.1-SNAPSHOT'
+group = 'zoeque'
+version = '1.0.0'
+
+apply plugin: 'pmd'
 
 java {
 	sourceCompatibility = '17'
@@ -41,4 +43,26 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+pmd {
+	toolVersion '6.0.0'
+	ignoreFailures = true
+	consoleOutput = true
+	ruleSets = [
+				  'java-basic',
+				  'java-braces',
+				  'java-clone',
+				  'java-codesize',
+				  'java-design',
+				  'java-empty',
+				  'java-finalizers',
+				  'java-imports',
+				  'java-strictexception',
+				  'java-strings',
+				  'java-sunsecure',
+				  'java-typeresolution',
+				  'java-unnecessary',
+				  'java-unusedcode'
+	]
 }
