--- a/build.gradle
+++ b/build.gradle
@@ -50,19 +50,6 @@ pmd {
 	ignoreFailures = true
 	consoleOutput = true
 	ruleSets = [
-				  'java-basic',
-				  'java-braces',
-				  'java-clone',
-				  'java-codesize',
-				  'java-design',
-				  'java-empty',
-				  'java-finalizers',
-				  'java-imports',
-				  'java-strictexception',
-				  'java-strings',
-				  'java-sunsecure',
-				  'java-typeresolution',
-				  'java-unnecessary',
-				  'java-unusedcode'
+				  'java-basic'
 	]
 }
